--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".dipattern.lesson_three_field_injection.FieldInjectionActivity"></activity>
+        <activity android:name=".dipattern.lesson_two_constructor_injection_with_module.ConstructorInjectionWithModuleActivity" />
+        <activity android:name=".dipattern.lesson_one_constructor_injection.ConstructorInjectionActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
