--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".dipattern.lesson_seven_named_param.NamedParamsActivity"></activity>
-        <activity android:name=".dipattern.lesson_six_component_builder_for_runtime_parameters.ComponentBuilderDependencyActivity"></activity>
+        <activity android:name=".dipattern.lesson_seven_named_param.LessonSevenActivity"></activity>
+        <activity android:name=".dipattern.lesson_six_component_builder_for_runtime_parameters.LessonSixActivity"></activity>
         <activity android:name=".dipattern.lesson_five_runtime_dependency.RuntimeDependencyActivity"></activity>
-        <activity android:name=".dipattern.lesson_four_binds.BindActivity" />
-        <activity android:name=".dipattern.lesson_three_field_injection.FieldInjectionActivity" />
-        <activity android:name=".dipattern.lesson_two_constructor_injection_with_module.ConstructorInjectionWithModuleActivity" />
-        <activity android:name=".dipattern.lesson_one_constructor_injection.ConstructorInjectionActivity" />
+        <activity android:name=".dipattern.lesson_four_binds.LessonFourActivity" />
+        <activity android:name=".dipattern.lesson_three_field_injection.LessonThreeActivity" />
+        <activity android:name=".dipattern.lesson_two_constructor_injection_with_module.LessonTwoActivity" />
+        <activity android:name=".dipattern.lesson_one_constructor_injection.LessonOneActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
